--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
 	"require":
 	{
 		"composer/installers": "*",
-		"silverstripe/framework": "3.1.*",
-		"silverstripe/cms": "3.1.*"
+		"silverstripe/framework": "~3.1",
+		"silverstripe/cms": "~3.1"
 	},
 	"extra": {
 		"installer-name": "rateable"
